# distributed-systems-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
1_mapreduce/: Cargo.toml  test.sh
1_mapreduce/src/: lib.rs
1_mapreduce/src/mrapps/: word_count.rs
2_two-phase-commit/: Cargo.toml
