[package]
name = "mapreduce"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
serde = "1.0"
serde_json = "1.0"
libloading = "0.5"
async-std = { version = "1.5", default-features = false, features = ["unstable"] }
tokio = { version = "0.2", features = ["rt-threaded", "fs", "io-util", "macros"] }
tokio-serde = { version = "0.6", features = ["json"] }
tarpc = { version = "0.20", features = ["full"] }
